# src/static/swagger.json
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: Application
-  description: Generated at 14/05/2023 02:58:24. This is the swagger 
+  description: Generated at 28/05/2023 17:05:42. This is the swagger 
     ui based on the open api 3.0 specification of the Application
   version: 1.0.0 created by the flask swagger generator.
 externalDocs:
@@ -91,6 +91,24 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/get_feedback_response'
+  '/commands':
+    get:
+      tags:
+      - send_notification
+      operationId: 'get_commands'
+      responses:
+        '200':
+          $ref: '#/components/responses/get_commands_response'
+  '/chat_rising':
+    post:
+      tags:
+      - send_notification
+      operationId: 'message_agent'
+      requestBody:
+        $ref: '#/components/requestBodies/message_agent_request_body' 
+      responses:
+        '200':
+          $ref: '#/components/responses/message_agent_response'
 components:
   requestBodies:
     send_notification_request_body:
@@ -121,6 +139,13 @@ components:
          application/json:
              schema:
                  $ref: '#/components/schemas/add_feedback'
+    message_agent_request_body:
+      description: None
+      required: True
+      content:
+         application/json:
+             schema:
+                 $ref: '#/components/schemas/message_agent'
   responses:
     send_notification_response:
       description: send_notification response
@@ -158,6 +183,18 @@ components:
          application/json:
              schema:
                  $ref: '#/components/schemas/get_feedback_response_schema'
+    get_commands_response:
+      description: get_commands response
+      content:
+         application/json:
+             schema:
+                 $ref: '#/components/schemas/get_commands_response_schema'
+    message_agent_response:
+      description: message_agent response
+      content:
+         application/json:
+             schema:
+                 $ref: '#/components/schemas/message_agent_response_schema'
   schemas:
     send_notification:
       type: object
@@ -286,3 +323,56 @@ components:
         result:
           type: string  
           example: test_result  
+    get_commands_response_schema:
+      type: object
+      properties:
+        message:
+          type: string  
+          example: message  
+        result:
+          type: string  
+          example: test_result  
+    message_agent_response_schema:
+      type: object
+      properties:
+        message:
+          type: string  
+          example: message  
+        result:
+          $ref: "#/components/schemas/result_message_agent_response_schema"  
+    result_message_agent_response_schema:
+      type: object
+      properties:
+        program:
+          type: string  
+          example: agent  
+        message:
+          $ref: "#/components/schemas/message_result_message_agent_response_schema"  
+    message_result_message_agent_response_schema:
+      type: object
+      properties:
+        role:
+          type: string  
+          example: assistant  
+        content:
+          type: string  
+          example: content  
+    message_agent:
+      type: object
+      properties:
+        token:
+          type: string  
+          example: test_token  
+        uuid:
+          type: string  
+          example: test_uuid  
+        history:
+          type: array  
+          items:
+            type: object
+        user_input:
+          type: string  
+          example: user_message  
+        model:
+          type: string  
+          example: gpt-3.5-turbo  
